intTests/test_parse_errors/parser001.log.good
 Loading file "parser001.saw"
 Stack trace:
   (builtin) (at top level)
Parse error at parser001.saw:2:13-2:23: Unexpected `rebindable'

FAILED
