intTests/test_parse_errors/parser001.saw
// "rebindable" is not allowed in let-expressions
let a = let rebindable a' = 3 in ();
